src/assets/03-styles.css
:root {
  --color-background: #FEFEFE;
  --color-foreground: #222;
  --color-link-foreground: var(--color-foreground);
  --color-link-highlighted-foreground: var(--color-link-foreground);
  --color-highlight: #F7BF05;
  --color-highlighted-foreground: var(--color-foreground);
  --color-muted-background: #E5E5E5;
  --color-muted-foreground-1: #999;
  --color-muted-foreground-2: #777;
  --color-code-background: #F6F6F6;
  --color-code-border: #DDD;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: #222;
    --color-foreground: #DDD;
    --color-link-highlighted-foreground: #333;
    --color-highlight: #F7BF05;
    --color-highlighted-foreground: #333;
    --color-muted-background: #444;
    --color-muted-foreground-1: #CCC;
    --color-muted-foreground-2: #AAA;
    --color-code-background: #444;
    --color-code-border: #555;
  }

  img {
    filter: brightness(.8) contrast(1.2);
  }
}

html, body {
  font-family: LatoLatinWeb, Helvetica, Arial, sans-serif;
  color: var(--color-foreground);
  display: flex;
  justify-content: center;
  font-size: 14px;
}

body {
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
}

a {
  text-decoration-color: var(--color-highlight);
  text-decoration-thickness: 0.13em;
  color: var(--color-link-foreground);
}

a:hover {
  text-decoration-line: none;
}

.link--current {
  background: var(--color-highlight);
  color: var(--color-link-highlighted-foreground)
}

.link--current:hover {
  text-decoration-line: underline;
  text-decoration-color: var(--color-link-highlighted-foreground);
}

body {
  background: var(--color-background);
  display: flex;
  align-items: center;
  flex-direction: column;
  margin: 1rem;
}

header {
  width: 100%;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 5rem;
}

header #logo {
  max-width: 10rem;
}

header nav {
  display: inline-flex;
  gap: 1rem;
}

#articles {
  width: 100%;
  line-height: 1.6em;
}

#articles .article-link {
  display: flex;
  align-content: center;
}

#articles .article-link:not(:first-of-type) {
  margin-top: 0.8em;
}

.article-link a {
  display: inline-block;
  background: var(--color-highlight);
  color: var(--color-highlighted-foreground);
  font-weight: bold;
  padding: 0 .4em;
  margin-right: .2em;
  text-decoration: none;
}

.article-link a:hover {
  text-decoration: underline;
  text-decoration-thickness: 0.1em;
}

.article-link .article-link__date {
  background: var(--color-muted-background);
  color: var(--color-muted-foreground-1);
  font-size: .7em;
  margin-right: .5em;
  padding: 0 .5em;
  font-weight: bold;
}

.page {
  width: 100%;
}

.page__header {
  display: inline;
  font-size: 1.6rem;
  line-height: 1.6em;
}

.page__content {
  line-height: 1.8rem;
  font-size: 1.1rem
}

.page__content figure {
  background: var(--color-code-background);
  padding: 1em;
  margin: 2em 0;
  border: 2px dashed var(--color-code-border);
  text-align: center;
}

.page__content figure figcaption {
  padding: .5em;
  font-size: .8em;
}

.page__content figure img {
  max-width: 100%;
}

.page__content > pre,
.page__content > .sourceCode {
  background: var(--color-code-background);
  padding: 1em;
  border: 2px dashed var(--color-code-border);
  word-break: break-all;
  word-wrap: break-word;
  margin: 2em 0;
}

.page__content > .sourceCode pre {
  margin: 0;
}

.page__content pre code {
  padding: 0;
  font-size: .9em;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
  border-radius: 0;
  line-height: 1.4rem;
}

.page__content p > code {
  background: var(--color-code-background);
  border: 1px dashed var(--color-code-border);
  padding: 0 .5em;
  white-space: nowrap;
}

.header__title {
  background: var(--color-highlight);
  color: var(--color-highlighted-foreground);
  display: inline-block;
  font-size: 1em;
  font-weight: bold;
  padding: 0 .4em;
}

.header__meta {
  color: var(--color-muted-foreground-1);
  font-size: .6em;
}

.header__meta a {
  color: var(--color-muted-foreground-2);
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin: 4rem;
  font-size: .8rem;
}

@media screen and (min-width: 1280px) {
  html, body {
    font-size: 16px;
  }

  body {
    width: 1024px;
  }


  .page__content > pre,
  .page__content > .sourceCode,
  .page__content figure {
    margin-left: -1.5em;
    margin-right: -1.5em;
  }

  header nav {
    font-size: 1.1rem;
    gap: 3rem;
  }

  header #logo {
    width: unset;
  }

  #articles {
    font-size: 1.4rem;
  }
}

